crates/huak_cli/tests/snapshots/test_insta_example__tests__build_help.snap
---
source: crates/huak_cli/tests/test_insta_example.rs
info:
  program: huak
  args:
    - build
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Build tarball and wheel for the project

Usage: huak build [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

