crates/huak_cli/tests/snapshots/test_insta_example__tests__fmt_help.snap
---
source: crates/huak_cli/tests/test_insta_example.rs
info:
  program: huak
  args:
    - fmt
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Format the project's Python code

Usage: huak fmt [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
      --check  Check if Python code is formatted
  -q, --quiet  
  -h, --help   Print help

----- stderr -----

